-More work with location

--- a/assistant+/Makefile
+++ b/assistant+/Makefile
@@ -1,7 +1,8 @@
 include theos/makefiles/common.mk
 
+GO_EASY_ON_ME=1
 export ARCHS = armv7s arm64
-export TARGET = iphone:latest:8.1
+export TARGET = iphone:clang:latest:8.0
 export SDKVERSION=8.1
 
 TWEAK_NAME = Assistant+
@@ -11,6 +12,7 @@ Assistant+_FILES = AssistantHooks.xm assistantpluspluginmanager/APSession.xm
 Assistant+_FRAMEWORKS = Foundation UIKit CoreFoundation Accounts CoreLocation
 Assistant+_PRIVATE_FRAMEWORKS = AssistantServices SAObjects AppSupport
 Assistant+_LIBRARIES=substrate objcipc
+Assistant+_CFLAGS = -fobjc-arc
 
 include $(THEOS_MAKE_PATH)/tweak.mk
 
