--- a/assistant+/assistantpluspluginmanager/Makefile
+++ b/assistant+/assistantpluspluginmanager/Makefile
@@ -1,8 +1,11 @@
 include theos/makefiles/common.mk
 
+GO_EASY_ON_ME=1
+
 TWEAK_NAME = AssistantPlusPluginManager
-AssistantPlusPluginManager_FILES = Tweak.xm APPluginManager.mm APPlugin.m APPluginSnippetViewController.xm
-AssistantPlusPluginManager_PRIVATE_FRAMEWORKS = AssistantServices SAObjects
+AssistantPlusPluginManager_CFLAGS = -fobjc-arc
+AssistantPlusPluginManager_FILES = Tweak.xm APPluginManager.mm APPlugin.m APPluginSnippetViewController.xm APSpringboardUtils.m
+AssistantPlusPluginManager_PRIVATE_FRAMEWORKS = AssistantServices SAObjects AppSupport
 AssistantPlusPluginManager_FRAMEWORKS = Foundation UIKit CoreLocation
 AssistantPlusPluginManager_LIBRARIES=substrate objcipc
 
