--- a/spotifyPlugin/spotifyPlugin/_/DEBIAN/control
+++ b/spotifyPlugin/spotifyPlugin/_/DEBIAN/control
@@ -1,10 +1,10 @@
 Package: com.assistantplus.spotifycontrols
 Name: spotifySiriControls
-Depends: mobilesubstrate, com.zaid.assistant+
+Depends: mobilesubstrate
 Architecture: iphoneos-arm
 Description: Control Spotify using Siri! Currently spotifySiriControls supports searching for tracks, artists, and albums using commands like, “Search for Drake on Spotify”, “Search Taylor Swift on Spotify”, “Play Books by Swiss Lips on Spotify”, and “Play Paris on Spotify”.
 Maintainer: Zaid Elkurdi
 Author: Zaid Elkurdi
 Section: Tweaks
-Version: 1.0.0-6
+Version: 1.0.0-13
 Installed-Size: 616
