- siriSay added - Crash fix when deleting triggers

--- a/assistant+/Makefile
+++ b/assistant+/Makefile
@@ -28,4 +28,5 @@ SUBPROJECTS += assistantplusapp
 SUBPROJECTS += assistantplus_root_helper
 SUBPROJECTS += customreply
 
+SUBPROJECTS += sirisay
 include $(THEOS_MAKE_PATH)/aggregate.mk
