--- a/assistant+/assistantplusapp/Resources/Info.plist
+++ b/assistant+/assistantplusapp/Resources/Info.plist
@@ -11,7 +11,7 @@
 		<string>iPhoneOS</string>
 	</array>
 	<key>CFBundleExecutable</key>
-	<string>AssistantPlusApp</string>
+	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.assistantplus.app</string>
 	<key>CFBundleInfoDictionaryVersion</key>
