--- a/assistant+/_/debian/control
+++ b/assistant+/_/debian/control
@@ -1,11 +1,10 @@
 Package: com.zaid.assistant+
 Name: Assistant+
 Depends: libactivator (>= 1.8.3), mobilesubstrate
+Version: 1.0.1
 Architecture: iphoneos-arm
 Description: Assign commands to trigger Activator events from Siri, set up custom replies for Siri, and also use and create plugins for Siri using the Assistant+ plugin framework
 Maintainer: Zaid Elkurdi
 Author: Zaid Elkurdi
 Section: Tweaks
 Icon: file:///Applications/AssistantPlusApp.app/Icon.png
-Version: 1.0.0-42
-Installed-Size: 1592
