- Capture Group Commands - Run commands with NSTask

--- a/assistant+/assistantplusapp/Makefile
+++ b/assistant+/assistantplusapp/Makefile
@@ -5,7 +5,7 @@ export TARGET = iphone:clang:latest:8.0
 export SDKVERSION=8.1
 
 APPLICATION_NAME = AssistantPlusApp
-AssistantPlusApp_FILES = main.m AppDelegate.m MainViewController.m APActivatorListener.m ActivatorListenersViewController.m ListenerDetailViewController.m CustomReplyDetailViewController.m CustomRepliesViewController.m APCustomReply.m PluginsViewController.m
+AssistantPlusApp_FILES = main.m AppDelegate.m MainViewController.m APActivatorListener.m ActivatorListenersViewController.m ListenerDetailViewController.m CustomReplyDetailViewController.m CustomRepliesViewController.m APCustomReply.m PluginsViewController.m CaptureGroupCommandDetailViewController.m CaptureGroupCommandsViewController.m APCaptureGroupCommand.m
 AssistantPlusApp_FRAMEWORKS = UIKit CoreGraphics QuartzCore
 AssistantPlusApp_PRIVATE_FRAMEWORKS = AppSupport
 AssistantPlusApp_CFLAGS = -fobjc-arc
